--- a/package.json
+++ b/package.json
@@ -3,5 +3,30 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
-  "main": "index.js"
+  "main": "dist/plugin.js",
+  "scripts": {
+    "lint": "eslint lib test *.js",
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "@yafu/eslint-config-yafu": "^1.0.2",
+    "chai": "^4.2.0",
+    "eslint": "^7.16.0",
+    "fs-extra": "^9.0.1",
+    "mocha": "^8.2.1",
+    "rollup": "^2.35.1",
+    "source-map-support": "^0.5.19"
+  },
+  "dependencies": {
+    "yafu": "^1.0.4",
+    "@babel/core": "^7.12.10",
+    "@babel/generator": "^7.12.11",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/register": "^7.12.10",
+    "@babel/traverse": "^7.12.10",
+    "@babel/types": "^7.12.11",
+    "acorn": "^8.0.4",
+    "ramda": "^0.27.1",
+    "recast": "^0.20.4"
+  }
 }
