--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "source-map-support": "^0.5.19"
   },
   "dependencies": {
-    "yafu": "^1.0.4",
     "@babel/core": "^7.12.10",
     "@babel/generator": "^7.12.11",
     "@babel/preset-env": "^7.12.11",
@@ -26,7 +25,9 @@
     "@babel/traverse": "^7.12.10",
     "@babel/types": "^7.12.11",
     "acorn": "^8.0.4",
+    "acorn-jsx": "^5.3.1",
     "ramda": "^0.27.1",
-    "recast": "^0.20.4"
+    "recast": "^0.20.4",
+    "yafu": "^1.0.4"
   }
 }
