--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "author": "Ludwig Magnusson <ludwig.magnusson@gmail.com>",
-  "main": "dist/plugin.js",
+  "main": "./dist/plugin.js",
+  "exports": {
+    ".": {
+      "import": "./lib/plugin.mjs",
+      "require": "./dist/plugin.js"
+    }
+  },
   "scripts": {
     "lint": "eslint lib test *.js",
     "test": "mocha"
@@ -13,7 +19,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
     "fs-extra": "^9.0.1",
-    "mocha": "^8.2.1",
+    "mocha": "^9.0.2",
     "rollup": "^2.35.1",
     "source-map-support": "^0.5.19"
   },
